==> m-gardet/STM32F3DISCOVERY/Src/command.c <==
#include "FreeRTOS.h"
#include "task.h"
#include "cmsis_os.h"
#include "queue.h"
#include "usbQueue.h"
#include "usbd_cdc_if.h"
#include <stdio.h>
#include "stm32f3xx_hal_gpio.h"
#include "flash.h"
#include "iwdg.h"
#define END_OF_LINE "\n\r"
#define OS_WAITE_TIMEOUT 1000 // in ms
#define CMD_OK "*OK* "
#define CMD_KO "*KO* "
#define HELP_NAME "HELP"
#define HELP_NAME_LEN (sizeof(HELP_NAME)-1)
#define SET_SYS_NAME_NAME "SETNAME"
#define SET_SYS_NAME_LEN (sizeof(SET_SYS_NAME_NAME)-1)
#define GET_SYS_NAME_NAME "GETNAME"
#define GET_SYS_NAME_LEN (sizeof(GET_SYS_NAME_NAME)-1)
#define UNKNOWN_TOTAL_LEN  0xFF
#define GET_UID_NAME "GET UID"
#define GET_UID_NAME_LEN (sizeof(GET_UID_NAME)-1)
#define SAVE_CONFIG_NAME "CONFIG SAVE"
#define SAVE_CONFIG_NAME_LEN (sizeof(SAVE_CONFIG_NAME)-1)
#define DUMP_CONFIG_NAME "CONFIG DUMP"
#define DUMP_CONFIG_NAME_LEN (sizeof(DUMP_CONFIG_NAME)-1)
#define GPIO_INIT_NAME "INIT"
#define GPIO_INIT_NAME_LEN (sizeof(GPIO_INIT_NAME)-1)
#define GPIO_NAME_LEN 4
#define GPIO_MODE_LEN     3
#define MODE_INPUT        "INP"
#define MODE_OUTPUT_PP    "OPP"
#define MODE_OUTPUT_OD    "OOD"
#define GPIO_PULL_LEN  2
#define NOPULL        "NO"
#define PULLUP        "UP"
#define PULLDOWN      "DO"
#define GPIO_INIT_TOTAL_LEN (GPIO_INIT_NAME_LEN+1 +GPIO_NAME_LEN+1  + GPIO_MODE_LEN+1 + GPIO_PULL_LEN)
#define GPIO_SET_NAME "SET"
#define GPIO_SET_NAME_LEN (sizeof(GPIO_SET_NAME)-1)
#define GPIO_VALUE_LEN 1

int help(uint8_t* cmd,uint8_t len)
{
  UNUSED(cmd);
  UNUSED(len);
  usb_printf("\n\r");
  usb_printf("----------------------help----------------------\n\r");
  usb_printf("HELP (this message)\n\r");
  usb_printf("--------------system configuration--------------\n\r");
  usb_printf("%s (%d)\n\r",SET_SYS_NAME_NAME,SET_SYS_NAME_LEN+sizeof(config.sys_name));
  usb_printf("%s (%d)\n\r",GET_SYS_NAME_NAME,GET_SYS_NAME_LEN);
  usb_printf("%s (%d)\n\r",GET_UID_NAME,GET_UID_NAME_LEN);
  usb_printf("%s (%d)\n\r",SAVE_CONFIG_NAME,SAVE_CONFIG_NAME_LEN);
  usb_printf("%s (%d)\n\r",DUMP_CONFIG_NAME,DUMP_CONFIG_NAME_LEN);
  usb_printf("---------------gpio configuration---------------\n\r");
  usb_printf("gpio configuration\n\r");
  usb_printf("%s NAME MODE PULL\n\r",GPIO_INIT_NAME);
  usb_printf("  NAME (%d bytes)n\r",GPIO_NAME_LEN);
  usb_printf("        PC13, PA00, PB15, ...\n\r");
  usb_printf("  MODE (%d bytes) \n\r",GPIO_MODE_LEN);
  usb_printf("        %s   (Input Floating)\n\r",MODE_INPUT);
  usb_printf("        %s   (Output Push Pull Mode)\n\r",MODE_OUTPUT_PP);
  usb_printf("        %s   (Output Open Drain Mode)\n\r",MODE_OUTPUT_OD);
  usb_printf("  PULL (%d bytes) \n\r",GPIO_PULL_LEN);
  usb_printf("        %s   (No Pull-up or Pull-down)\n\r",NOPULL);
  usb_printf("        %s   (Pull-up)\n\r",PULLUP);
  usb_printf("        %s   (Pull-down)\n\r",PULLDOWN);
  usb_printf("sample\n");
  usb_printf("INIT PC13 OPP NO (%d bytes)\n\r",GPIO_INIT_NAME_LEN);
  usb_printf("-----------------gpio read/write----------------\n\r");
  usb_printf("GET NAME\n\r");
  usb_printf("%s NAME VALUE (%d bytes)\n\r",GPIO_SET_NAME,GPIO_SET_TOTAL_LEN);
  /*
    usb_printf("--------------------adc  read-------------------\n\r");
    usb_printf("ADC NUMBER ( 00 to 01)\n\r");
    usb_printf("\n\r");
  */
  return 0;
}

int gpio_write_pin(GPIO_TypeDef* GPIOx, uint16_t pin, GPIO_PinState state)
{
  /* Check the parameters */
  if(!IS_GPIO_PIN(pin))
  {
    return -1;
  }

  if(!IS_GPIO_PIN_ACTION(state))
  {
    return -1;
  }

  HAL_GPIO_WritePin(GPIOx, pin, state);
  return 0;
}

int gpio_read_pin(GPIO_TypeDef* GPIOx, uint16_t pin)
{
  /* Check the parameters */
  if(!IS_GPIO_PIN(pin))
  {
    return -1;
  }

  return HAL_GPIO_ReadPin(GPIOx, pin);
}

int gpio_init(GPIO_TypeDef *GPIOx,uint32_t pin,uint32_t mode,uint32_t pull)
{
  if(! IS_GPIO_ALL_INSTANCE(GPIOx))
  {
    return -1;
  }

  if(! IS_GPIO_PIN(pin))
  {
    return -1;
  }

  if(! IS_GPIO_MODE(mode))
  {
    return -1;
  }

  if(! IS_GPIO_PULL(pull))
  {
    return -1;
  }

  GPIO_InitTypeDef gpioInitStructure;
  gpioInitStructure.Pin = pin;
  gpioInitStructure.Mode = mode;
  gpioInitStructure.Pull = pull;
  gpioInitStructure.Speed = GPIO_SPEED_FREQ_LOW;
  HAL_GPIO_Init(GPIOx, &gpioInitStructure);
  return 0;
}

int get_port_and_pin(const uint8_t name[GPIO_NAME_LEN],GPIO_TypeDef **port,uint32_t *pin)
{
  int number=-1;

  if(name[0] != 'P')
  {
    usb_printf(CMD_KO "Invalid format: %c != P\n\r",name[0]);
    return -1;
  }

  switch(name[1])
  {
    case 'A':
      *port = GPIOA;
      break;

    case 'B':
      *port = GPIOB;
      break;

    case 'C':
      *port = GPIOC;
      break;

    case 'D':
      *port = GPIOD;
      break;

    case 'E':
      *port = GPIOE;
      break;

    case 'F':
      *port = GPIOF;
      break;

    default:
      usb_printf(CMD_KO "unknown port: %c\n\r",name[1]);
      return -1;
      break;
  }

  number = (name[2]-'0')*10 + (name[3]-'0');

  switch(number)
  {
    case 0 :
      *pin = GPIO_PIN_0;
      break;

    case 1 :
      *pin = GPIO_PIN_1;
      break;

    case 2 :
      *pin = GPIO_PIN_2;
      break;

    case 3 :
      *pin = GPIO_PIN_3;
      break;

    case 4 :
      *pin = GPIO_PIN_4;
      break;

    case 5 :
      *pin = GPIO_PIN_5;
      break;

    case 6 :
      *pin = GPIO_PIN_6;
      break;

    case 7 :
      *pin = GPIO_PIN_7;
      break;

    case 8 :
      *pin = GPIO_PIN_8;
      break;

    case 9 :
      *pin = GPIO_PIN_9;
      break;

    case 10:
      *pin = GPIO_PIN_10;
      break;

    case 11:
      *pin = GPIO_PIN_11;
      break;

    case 12:
      *pin = GPIO_PIN_12;
      break;

    case 13:
      *pin = GPIO_PIN_13;
      break;

    case 14:
      *pin = GPIO_PIN_14;
      break;

    case 15:
      *pin = GPIO_PIN_15;
      break;

    default:
      usb_printf(CMD_KO "unknown pin number: %d\n\r",number);
      return -1;
      break;
  }

  return 0;
}

int cmd_save_config(uint8_t* cmd,uint8_t len)
{
  UNUSED(cmd);
  UNUSED(len);
  if(memcmp((void*)CONFIGUATION_ADDRESS,(void*)&config,sizeof(config)) == 0)
  {
    usb_printf(CMD_OK "is uptodate \n\r");
    return 0;
  }

  if(flash_Update(CONFIGUATION_ADDRESS, (const uint8_t *)&config, sizeof(config)) != 0)
  {
    usb_printf(CMD_KO "flash Update error\n\r");
    return -1;
  }

  usb_printf(CMD_OK "\n\r");
  return 0;
}
