==> m-gardet/esp32-s2-mini/main/command.c <==
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <inttypes.h>
#include <stdarg.h>
#include "esp_log.h"
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "freertos/queue.h"
#include "driver/gpio.h"
#include "tinyusb.h"
#include "tusb_cdc_acm.h"
#include "esp_mac.h"
#include "nvs_flash.h"
#include "nvs.h"
#define UNUSED(x) ((void)(x))
#define VERSION "1.0.1"
#define END_OF_LINE "\n\r"
#define OS_WAITE_TIMEOUT 1000 // in ms
#define STORAGE_NAMESPACE "storage"
#define GPIO_NOPULL   0x00000000U
#define GPIO_PULLUP   0x00000001U
#define GPIO_PULLDOWN   0x00000002U
#define GPIO_MODE_OUTPUT_PP   GPIO_MODE_INPUT_OUTPUT
#define GPIO_MODE_OUTPUT_OD   GPIO_MODE_INPUT_OUTPUT_OD
#define GPIO_MODE_ANALOG   0x00000055U
#define GPIO_PIN_RESET  0x00000000U
#define GPIO_PIN_SET  0x00000001U
#define NUMBER_OF_GPIO 41
#define INTEGRITY_NAME "ZZZZ"
#define CMD_OK "*OK* "
#define CMD_KO "*KO* "
#define HELP_NAME "HELP"
#define HELP_NAME_LEN (sizeof(HELP_NAME)-1)
#define SET_SYS_NAME_NAME "SET_NAME"
#define SET_SYS_NAME_LEN (sizeof(SET_SYS_NAME_NAME)-1)
#define GET_SYS_NAME_NAME "GET_NAME"
#define GET_SYS_NAME_LEN (sizeof(GET_SYS_NAME_NAME)-1)
#define UNKNOWN_TOTAL_LEN  0xFFFF
#define GET_UID_NAME "GET_UID"
#define GET_UID_NAME_LEN (sizeof(GET_UID_NAME)-1)
#define SAVE_CONFIG_NAME "CONFIG_SAVE"
#define SAVE_CONFIG_NAME_LEN (sizeof(SAVE_CONFIG_NAME)-1)
#define DUMP_CONFIG_NAME "CONFIG_DUMP"
#define DUMP_CONFIG_NAME_LEN (sizeof(DUMP_CONFIG_NAME)-1)

int help(uint8_t* cmd, uint16_t len)
{
  UNUSED(cmd);
  UNUSED(len);
  usb_printf("\n\r");
  usb_printf("----------------------help----------------------\n\r");
  usb_printf("APP VERSION %s\n\r", VERSION);
  usb_printf("HELP (this message)\n\r");
  usb_printf("--------------system configuration--------------\n\r");
  usb_printf("%s XXXXXX (len max %d) \n\r", SET_SYS_NAME_NAME, SET_SYS_NAME_LEN+sizeof(config.sys_name));
  usb_printf("%s (%d)\n\r", GET_SYS_NAME_NAME, GET_SYS_NAME_LEN);
  usb_printf("%s (%d)\n\r", GET_UID_NAME, GET_UID_NAME_LEN);
  usb_printf("%s (%d)\n\r", SAVE_CONFIG_NAME, SAVE_CONFIG_NAME_LEN);
  usb_printf("%s (%d)\n\r", DUMP_CONFIG_NAME, DUMP_CONFIG_NAME_LEN);
  usb_printf("%s (%d)\n\r", LOAD_CONFIG_NAME, LOAD_CONFIG_NAME_LEN);
  usb_printf("%s (%d)\n\r", DEFAULT_CONFIG_NAME, DEFAULT_CONFIG_NAME_LEN);
  usb_printf("---------------gpio configuration---------------\n\r");
  usb_printf("gpio configuration\n\r");
  usb_printf("%s NAME MODE PULL\n\r", GPIO_INIT_NAME);
  usb_printf("  NAME (%d bytes)\n\r", GPIO_NAME_LEN);
  usb_printf("        IO01, IO15, IO33, ...\n\r");
  usb_printf("  MODE (%d bytes) \n\r", GPIO_MODE_LEN);
  usb_printf("        %s   (Input Floating)\n\r", MODE_INPUT);
  usb_printf("        %s   (Input ADC IO01, IO02)\n\r", MODE_INPUT_ADC);
  usb_printf("        %s   (Output Push Pull Mode)\n\r", MODE_OUTPUT_PP);
  usb_printf("        %s   (Output Open Drain Mode)\n\r", MODE_OUTPUT_OD);
  usb_printf("  PULL (%d bytes) \n\r", GPIO_PULL_LEN);
  usb_printf("        %s   (No Pull-up or Pull-down)\n\r", NOPULL);
  usb_printf("        %s   (Pull-up)\n\r", PULLUP);
  usb_printf("        %s   (Pull-down)\n\r", PULLDOWN);
  usb_printf("sample\n\r");
  usb_printf("INIT IO02 OPP NO (%d bytes)\n\r", GPIO_INIT_NAME_LEN);
  usb_printf("-----------------gpio read/write----------------\n\r");
  usb_printf("GET NAME\n\r");
  usb_printf("%s NAME VALUE (%d bytes)\n\r", GPIO_SET_NAME, GPIO_SET_TOTAL_LEN);
  /*
    usb_printf("--------------------adc  read-------------------\n\r");
    usb_printf("ADC NUMBER ( 00 to 01)\n\r");
    usb_printf("\n\r");
  */
  return 0;
}

int gpio_write_pin(GPIO_TypeDef* GPIOx, uint32_t pin, uint8_t state)
{
  return gpio_set_level(pin, state);
}

int gpio_read_pin(GPIO_TypeDef* GPIOx, uint32_t pin)
{
  return gpio_get_level(pin);
}

int gpio_init(GPIO_TypeDef *GPIOx, uint32_t pin, uint32_t mode, uint32_t pull)
{
  //zero-initialize the config structure.
  gpio_config_t io_conf = {};
  //disable interrupt
  io_conf.intr_type = GPIO_INTR_DISABLE;
  //set as output mode
  io_conf.mode = mode;
  //bit mask of the pins that you want to set,e.g.GPIO18/19
  io_conf.pin_bit_mask = ((uint64_t)(((uint64_t)1)<<pin));

  if(pull == GPIO_PULLUP)
  {
    //disable pull-down mode
    io_conf.pull_down_en = 0;
    //enable pull-up mode
    io_conf.pull_up_en = 1;
  }
  else if(pull == GPIO_PULLDOWN)
  {
    //enable pull-down mode
    io_conf.pull_down_en = 1;
    //disable pull-up mode
    io_conf.pull_up_en = 1;
  }
  else  // GPIO_NOPULL
  {
    //disable pull-down mode
    io_conf.pull_down_en = 0;
    //disable pull-up mode
    io_conf.pull_up_en = 0;
  }

  //configure GPIO with the given settings
  return gpio_config(&io_conf);
}

int get_port_and_pin(const uint8_t name[GPIO_NAME_LEN], GPIO_TypeDef **port, uint32_t *pin)
{
  int number=-1;

  if(name[0] != 'I' && name[0] != 'O')
  {
    usb_printf(CMD_KO "Invalid format: %c%c != IOXX\n\r", name[0], name[1]);
    return -1;
  }

  number = (name[2]-'0')*10 + (name[3]-'0');

  if(number > (NUMBER_OF_GPIO-1))
  {
    usb_printf(CMD_KO "Invalid format: IO00 to IO%d\n\r", (NUMBER_OF_GPIO-1));
    return -1;
  }

  *pin = number;
  return 0;
}

int cmd_save_config(uint8_t* cmd, uint16_t len)
{
  UNUSED(cmd);
  UNUSED(len);
  nvs_handle_t my_handle;
  esp_err_t err;
  // Open
  err = nvs_open(STORAGE_NAMESPACE, NVS_READWRITE, &my_handle);

  if(err != ESP_OK)
  {
    usb_printf(CMD_KO "flash Update error NVS open %s\n\r",  esp_err_to_name(err));
    return -1;
  }

  // Write blob
  err = nvs_set_blob(my_handle, "config", (void*)&config, sizeof(config));

  if(err != ESP_OK)
  {
    usb_printf(CMD_KO "flash Update error nvs set %s\n\r",  esp_err_to_name(err));
    nvs_close(my_handle);
    return -1;
  }

  // Commit
  err = nvs_commit(my_handle);

  if(err != ESP_OK)
  {
    usb_printf(CMD_KO "flash Update error nvs_commit %s\n\r",  esp_err_to_name(err));
    nvs_close(my_handle);
    return -1;
  }

  nvs_close(my_handle);
  usb_printf(CMD_OK "\n\r");
  return 0;
}
